Ask user if they want to copy their certificates under KDE configuration during OpenVPN import

REVIEW:120530
BUG:339654
CCBUG:329837